src/objects/BatchUpdateProductsLog__c.object
<CustomObject>
    <description>Custom Log object for BatchUpdateProducts</description>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ErrorMessages__c</fullName>
        <label>Error Messages</label>
        <length>120000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobItemsProcessed__c</fullName>
        <label>Job Items Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfErrors__c</fullName>
        <label>Number Of Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCount__c</fullName>
        <label>Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch Update Products Log</label>
    <nameField>
        <label>Batch Update Products Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Update Products Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>